internal-only klaar, begonnen met matching

--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -2,7 +2,7 @@
 
 \chapter{Deriving the internal-only type}\label{ch:deriving-onlyinternal}
 
-In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the internal-only type have portmanteau for phi- and case-features. This means that the features of the relative pronoun and the light head are spelled out in such a way that they form the constituents shown in Figure \ref{fig:rel-lh-intonly-simple}.
+In Chapter \ref{ch:the-basic-idea}, I suggested that languages of the internal-only type have a portmanteau for phi- and case-features. This means that the features of the relative pronoun and the light head are spelled out in such a way that they form the constituents shown in Figure \ref{fig:rel-lh-intonly-simple}.
 
 \begin{figure}[htbp]
   \center
@@ -86,11 +86,11 @@ These lexical entries lead to a grammaticality pattern as shown in Table \ref{tb
     \label{tbl:overview-intonly}
 \end{table}
 
-When the internal and the external case match, the light head consists of phi- and case-features. The relative pronoun consists of the same features plus an additional feature \tsc{rel}. The features of the light head structurally form a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun bearing the internal and external case surfaces.
+First consider the situation in which the internal and the external case match. The light head consists of phi- and case-feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. The light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun bearing the internal and external case surfaces.
 
-When the internal case wins the case competition, the light head consists of phi- and case-features. The relative pronoun consists of the same features plus an additional feature \tsc{rel} and a more complex case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The features of the light head structurally form a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun bearing the internal and external case surfaces.
+Consider now the situation in the internal case wins the case competition. The light head consists of phi- and case-features. The relative pronoun consists of the same features plus an additional feature \tsc{rel} and a more complex case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The features of the light head structurally form a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun bearing the internal and external case surfaces.
 
-When the external case wins the case competition, the relative pronoun consists of phi- and case-features and the feature \tsc{rel}. The light head lacks feature \tsc{rel} compared to the relative pronoun, but is contains a more complex case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). Neither the light head nor the relative pronoun structurally forms a constituent within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of phi- and case-features and the feature \tsc{rel}. The light head lacks feature \tsc{rel} compared to the relative pronoun, but is contains a more complex case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). Neither the light head nor the relative pronoun structurally forms a constituent within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 
 In Chapter \ref{ch:typology}, I showed that Modern German is a language of the internal-only type. In this chapter, I show that Modern German light heads and relative pronouns have this type of structure described in Figure \ref{fig:rel-lh-intonly-simple}. I give a compact version of the structures in Figure \ref{fig:rel-lh-mg}.
 
@@ -103,7 +103,7 @@ In Chapter \ref{ch:typology}, I showed that Modern German is a language of the i
       \begin{forest} boom
         [\tsc{k}P,
         tikz={
-        \node[label=below:\tit{r/n/m},
+        \node[label=below:\tit{n/m},
         draw,circle,
         scale=0.75,
         fit to=tree]{};
@@ -128,7 +128,7 @@ In Chapter \ref{ch:typology}, I showed that Modern German is a language of the i
             ]
             [\tsc{k}P,
             tikz={
-            \node[label=below:\tit{r/n/m},
+            \node[label=below:\tit{n/m},
             draw,circle,
             scale=0.75,
             fit to=tree]{};
@@ -147,9 +147,9 @@ In Chapter \ref{ch:typology}, I showed that Modern German is a language of the i
 \end{figure}
 
 Consider the light head in Figure \ref{fig:rel-lh-mg}.
-Light heads (i.e. phi- and case-features) in Modern German are spelled out by a single morpheme, indicated by the circle around the structure. They are spelled out as \tit{r}, \tit{n} or \tit{m} depending on which case they realize.
+Light heads (i.e. phi- and case-features) in Modern German are spelled out by a single morpheme, indicated by the circle around the structure. They are spelled out as \tit{n} or \tit{m}, depending on which case they realize.
 Consider the relative pronoun in Figure \ref{fig:rel-lh-mg}.
-Relative pronouns in Modern German consist of two morphemes: the constituent that forms the light head (i.e. phi- and case features) and the \tsc{rel}P, again indicated by the circles.
+Relative pronouns in Modern German consist of two morphemes: the constituent that forms the light head (i.e. phi- and case features) and the \tsc{rel}P, again indicated by the circles. The \tsc{rel}P is spelled out as \tit{we}.
 Throughout this chapter, I discuss the exact feature content of relative pronouns and light heads, I give lexical entries for them, and I show how these lexical entries form the constituents shown in Figure \ref{fig:rel-lh-mg}.
 
 The chapter is structured as follows.
@@ -176,7 +176,7 @@ In the introduction of this chapter, I suggested that in Modern German features 
       ]
       [\tsc{k}P,
       tikz={
-      \node[label=below:\tit{r/n/m},
+      \node[label=below:\tit{n/m},
       draw,circle,
       scale=0.75,
       fit to=tree]{};
@@ -192,7 +192,11 @@ In the introduction of this chapter, I suggested that in Modern German features 
 In Chapter \ref{ch:the-basic-idea}, I suggested that relative pronouns consist of at least three features: \tsc{rel}, ϕ and \tsc{k}.
 In this section, I show that relative pronoun consists of more features than that.
 Crucially, the main claim I made in Chapter \ref{ch:the-basic-idea} remains unchanged: Modern German has a portmanteau for the features that correspond to phi- and case-features and a separate lexical entry for the features the light head does not contain.
-I show the complete structure that I work towards in this section in \ref{ex:mg-rp}.
+I show the complete structure that I work towards in this section in \ref{ex:mg-rp}.\footnote{
+The \tsc{k}P in this functional sequence is a placeholder for multiple case projections.
+When the extra light head is the accusative, the \tsc{k}P consists of the features \tsc{f}1 and \tsc{f}2, and they form the \tsc{acc}P.
+When the extra light head is the dative, the \tsc{k}P consists of the features \tsc{f}1, \tsc{f}2 and \tsc{f}3, and they form the \tsc{dat}P.
+}
 
 \ex.\label{ex:mg-rp}
 \begin{adjustbox}{max width=0.9\textwidth}
@@ -216,7 +220,7 @@ I show the complete structure that I work towards in this section in \ref{ex:mg-
       ]
       [\tsc{k}P,
       tikz={
-      \node[label=below:\tit{r/n/m},
+      \node[label=below:\tit{n/m},
       draw,circle,
       scale=0.95,
       fit to=tree]{};
@@ -344,7 +348,7 @@ I assume that clitics lack the features \tsc{ref} (which corresponds to the LP i
 }
 
 I give the lexical entries for \tit{n} and \tit{m} in \ref{ex:mg-entry-n} and \ref{ex:mg-entry-m}.
-The \tit{n} is the nominative masculine singular, so it spells out the features \tsc{ref}, \tsc{cl}, \tsc{an}, \tsc{ind} \ac{f}1 and \tsc{f}2. The \tit{m} is the accusative masculine singular, so it spells out the features that the \tit{r} spells out plus \ac{f}3.
+The \tit{n} is the nominative masculine singular, so it spells out the features \tsc{ref}, \tsc{cl}, \tsc{an}, \tsc{ind} \ac{f}1 and \tsc{f}2. The \tit{m} is the accusative masculine singular, so it spells out the features that the \tit{n} spells out plus \ac{f}3.
 
 \ex.\label{ex:mg-entries-nm}
 \a.\label{ex:mg-entry-n}
@@ -506,9 +510,54 @@ In sum, the \tit{we} spells out the features \tsc{wh}, \tsc{rel}, \tsc{ind} and 
   {\draw (.east) node[right]{⇔ \tit{we}}; }
 \end{forest}\label{ex:mg-entry-we}
 
-At this point, I gave lexical entries for each of the morphemes (in \ref{ex:mg-entry-n}, \ref{ex:mg-entry-m} and \ref{ex:mg-entry-we})
-and I showed what the relative pronouns as a whole look like (in \ref{ex:mg-rp}).
-What is still needed, is a theory for combining these morphemes into a relative pronoun. This theory should determine which morphemes should be combined with each other in which order. Ideally, the theory is not language-specific, but the same for all languages. In what follows I show how this is accomplished in Nanosyntax. Readers who are not interested in the precise mechanics can proceed directly to Section \ref{sec:light-mg}.
+At this point, I gave lexical entries for each of the morphemes (in \ref{ex:mg-entry-n}, \ref{ex:mg-entry-m} and \ref{ex:mg-entry-we}),
+and I showed what the relative pronouns as a whole look like. I repeat them from \ref{ex:mg-rp} in \ref{ex:mg-rp-rep}.
+
+\ex.\label{ex:mg-rp-rep}
+\begin{adjustbox}{max width=0.9\textwidth}
+\begin{forest} boom
+  [\tsc{rel}P, s sep=40mm
+      [\tsc{rel}P,
+      tikz={
+      \node[label=below:\tit{we},
+      draw,circle,
+      scale=0.95,
+      fit to=tree]{};
+      }
+          [\tsc{rel}]
+          [\tsc{wh}P
+              [\tsc{wh}]
+              [\tsc{ind}P
+                  [\tsc{ind}]
+                  [\tsc{an}]
+              ]
+          ]
+      ]
+      [\tsc{k}P,
+      tikz={
+      \node[label=below:\tit{n/m},
+      draw,circle,
+      scale=0.95,
+      fit to=tree]{};
+      }
+          [\tsc{k}]
+          [\tsc{ind}P
+              [\tsc{ind}]
+              [\tsc{an}P
+                  [\tsc{an}]
+                  [\tsc{cl}P
+                      [\tsc{cl}]
+                      [\tsc{ref}]
+                  ]
+              ]
+          ]
+      ]
+  ]
+\end{forest}
+\end{adjustbox}
+
+What is still needed, is a theory for combining the morphemes into relative pronouns. This theory should determine which morphemes should be combined with each other in which order. Ultimately, the result needs to be the constituency in \ref{ex:mg-rp-rep}.
+Ideally, the theory is not language-specific, but the same for all languages. In what follows I show how this is accomplished in Nanosyntax. Readers who are not interested in the precise mechanics can proceed directly to Section \ref{sec:light-mg}.
 
 
 \section{Combining morphemes in Nanosyntax}\label{sec:combining}
@@ -542,11 +591,7 @@ The way Nanosyntax combines different morphemes is not by glueing them together 
 \end{forest}
 \end{adjustbox}
 
-Starting from the bottom, these are pronominal feature \tsc{ref}, gender features \tsc{cl} and \tsc{an}, a number feature \tsc{ind}, operator features \tsc{wh} and \tsc{rel} and case features \tsc{k}.\footnote{
-The \tsc{k}P in this functional sequence is a placeholder for multiple case projections.
-When the extra light head is the accusative, the \tsc{k}P consists of the features \tsc{f}1 and \tsc{f}2, and they form the \tsc{acc}P.
-When the extra light head is the dative, the \tsc{k}P consists of the features \tsc{f}1, \tsc{f}2 and \tsc{f}3, and they form the \tsc{dat}P.
-}
+Starting from the bottom, these are pronominal feature \tsc{ref}, gender features \tsc{cl} and \tsc{an}, a number feature \tsc{ind}, operator features \tsc{wh} and \tsc{rel} and case features \tsc{k}.
 This order is independently supported by work in the literature. Both Picallo and Kramer argue that number is hierarchically higher than gender. Case is agreed to be higher than number (cf. Bittner and Hale).
 
 \ex.
@@ -580,8 +625,8 @@ I start constructing the nominative relative pronoun. Starting from the bottom o
 \ex.
 \begin{forest} boom
   [\tsc{cl}P
-       [Σ]
        [\tsc{cl}]
+       [\tsc{ref}]
   ]
 \end{forest}
 
@@ -880,8 +925,8 @@ For the example under discussion, the situation looks as in \ref{ex:mg-rel-2x}.
 \begin{forest} boom
   [\tsc{rel}P
       [\tsc{rel}]
-      [\tsc{c}P
-          [\tsc{c}]
+      [\tsc{wh}P
+          [\tsc{wh}]
           [\tsc{ind}P
               [\tsc{ind}]
               [\tsc{an}]
@@ -958,7 +1003,7 @@ This structure does not form a constituent in any of the lexical trees in the la
 Backtracking leads splitting up the \tsc{rel}P from the \tsc{ind}P.
 The feature \tsc{f}1 is merged in both workspaces, so with the \tsc{rel}P and and with the \tsc{ind}P. The spellout of \tsc{f}1 is successful when it is combined with the \tsc{ind}P.
 It namely forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}, which corresponds to the \tit{n}.
-The \tsc{nom}P is spelled out as \tit{r}, and all constituents are merged back into the existing syntactic structure, as shown in \ref{ex:mg-spellout-rel-nom}.
+The \tsc{nom}P is spelled out as \tit{n}, and all constituents are merged back into the existing syntactic structure, as shown in \ref{ex:mg-spellout-rel-nom}.
 
 \ex.\label{ex:mg-spellout-rel-nom}
 \begin{adjustbox}{max width=0.9\textwidth}
@@ -1087,7 +1132,7 @@ It namely forms a constituent in the lexical tree in \ref{ex:mg-entry-m-rep}, re
   {\draw (.east) node[right]{⇔ \tit{m}}; }
 \end{forest}
 
-The \tsc{acc}P is spelled out as \tit{m}, and all constituents are merged back into the existing syntactic structure, as shown in \ref{ex:mg-spellout-rel-dat}.
+The \tsc{dat}P is spelled out as \tit{m}, and all constituents are merged back into the existing syntactic structure, as shown in \ref{ex:mg-spellout-rel-dat}.
 
 \ex.\label{ex:mg-spellout-rel-dat}
 \begin{adjustbox}{max width=0.9\textwidth}
@@ -1143,40 +1188,32 @@ To summarize, I decomposed the relative pronoun into the two morphemes \tit{we} 
 
 \section{The Modern German (extra) light head}\label{sec:light-mg}
 
-In Chapter \ref{ch:the-basic-idea}, I suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them forms a constituent within other.
-
-In the introduction of this chapter, I suggested that in Modern German features of the light head are spelled out in such a way that they form the constituency shown in \ref{ex:mg-lh-complex}.
+I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them forms a constituent within other. In the introduction of this chapter, I claimed that in Modern German features of the light head are spelled out in such a way that they form the constituency shown in \ref{ex:mg-lh-complex}.
 
 \ex.\label{ex:mg-lh-complex}
 \begin{forest} boom
   [\tsc{k}P,
   tikz={
-  \node[label=below:\tit{r/n/m},
+  \node[label=below:\tit{n/m},
   draw,circle,
   scale=0.75,
   fit to=tree]{};
   }
       [\tsc{k}]
       [ϕP
-          [\phantom{xxx}, roof, baseline]
+          [\phantom{xxx}, roof]
       ]
   ]
 \end{forest}
 
-In Chapter \ref{ch:the-basic-idea}, I suggested that light heads consist of at least two features: ϕ and \tsc{k}. In this section, I specify the feature content of the light head in more detail.
-Before I dive into the feature content of the light head, I first need to identify it, as it does not surface in headless relatives.
-I consider two kinds of light-headed relatives as the source of the headless relative.
-First, the deletion of the light head is optional, and the light-headed relative is derived from an existing light-headed relative.
-Second, the deletion of the light head is obligatory, and the light-headed relative is derived from a light-headed relative that does not surfaces in Modern German.
-I consider the first option first, and I give two reasons against it.
-However, to identify the exact input structure, I take the light head from the existing light-headed relative as a point of departure, and I modify it in such a way that it is appropriate as a light head for a headless relative.
-I end up claiming that the phi- and case-feature portmanteau of the relative pronoun is the light head in headless relatives, shown below in \ref{ex:mg-lh}.
+\ref{ex:mg-lh-complex} shows that light heads consist of at least two features: ϕ and \tsc{k}, as I suggested in Chapter \ref{ch:the-basic-idea}. In this section, I specify the feature content of the light head in more detail.
+I end up claiming that the phi- and case-feature portmanteau of the relative pronoun is the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:mg-lh}.
 
 \ex.\label{ex:mg-lh}
 \begin{forest} boom
     [\tsc{k}P,
     tikz={
-    \node[label=below:\tit{r/n/m},
+    \node[label=below:\tit{n/m},
     draw,circle,
     scale=0.95,
     fit to=tree]{};
@@ -1194,6 +1231,13 @@ I end up claiming that the phi- and case-feature portmanteau of the relative pro
         ]
     ]
 \end{forest}
+
+Before I dive into the feature content of the light head, I first need to identify it, as it does not surface in headless relatives.
+I consider two kinds of light-headed relatives as the source of the headless relative.
+First, the deletion of the light head is optional, and the light-headed relative is derived from an existing light-headed relative.
+Second, the deletion of the light head is obligatory, and the light-headed relative is derived from a light-headed relative that does not surfaces in Modern German.
+I consider the first option first, and I give two reasons against it.
+Then, to identify the exact input structure, I take the light head from the existing light-headed relative as a point of departure, and I modify it in such a way that it is appropriate as a light head for a headless relative.
 
 I give an example of a Modern German light-headed relative in \ref{ex:mg-den-wen}.\footnote{
 Modern German also has another light-headed relative, in which the relative pronoun is the \tsc{d}-pronoun. I give an example in \ref{ex:mg-den-den}.
@@ -1763,6 +1807,66 @@ I draw a dashed circle around each constituent that is a constituent in both the
 The extra light head consists of a single constituent: the \tsc{dat}P.
 In this case, the relative pronoun does not contain this constituent. The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{f}3 that makes a \tsc{dat}P. Since the weaker feature containment requirement is not met, the stronger constituent containment requirement cannot be met either.
 The extra light head also does not contain all constituents or features that the relative pronoun contains, because it lacks the complete constituent and \tsc{rel}P.
-Therefore, the extra light cannot be deleted, and the extra light head can also not delete the relative pronoun.
+Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 
 \section{Summary}
+
+Modern German is an example of an internal-only type of language. This means that headless relatives are grammatical in the language, as long as the internal and external case match or the internal case is the more complex one.
+
+I derive this from the morphology of light head and relative pronouns in Modern German. The light head corresponds to a single lexical entry, which spells out phi- and case-features. The relative pronoun corresponds in addition to that to another lexical entry, one that amongst other spells out a relative feature. The Modern German light head and relative pronoun are schematically shown in Figure \ref{fig:rel-lh-mg-sum}.
+
+\begin{figure}[htbp]
+  \center
+  \begin{tabular}[b]{ccc}
+      \toprule
+      light head & & relative pronoun \\
+      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+      \begin{forest} boom
+        [\tsc{k}P,
+        tikz={
+        \node[label=below:\tit{n/m},
+        draw,circle,
+        scale=0.75,
+        fit to=tree]{};
+        }
+            [\tsc{k}]
+            [ϕP
+                [\phantom{xxx}, roof, baseline]
+            ]
+        ]
+      \end{forest}
+      & \phantom{x} &
+      \begin{forest} boom
+        [\tsc{rel}P, s sep=15mm
+            [\tsc{rel}P,
+            tikz={
+            \node[label=below:\tit{we},
+            draw,circle,
+            scale=0.75,
+            fit to=tree]{};
+            }
+                [\phantom{xxx}, roof]
+            ]
+            [\tsc{k}P,
+            tikz={
+            \node[label=below:\tit{n/m},
+            draw,circle,
+            scale=0.75,
+            fit to=tree]{};
+            }
+                [\tsc{k}]
+                [ϕP
+                    [\phantom{xxx}, roof, baseline]
+                ]
+            ]
+        ]
+      \end{forest}\\
+      \bottomrule
+  \end{tabular}
+   \caption {\tsc{lh} and \tsc{rp} in Modern German (repeated)}
+  \label{fig:rel-lh-mg-sum}
+\end{figure}
+
+A crucial characteristic of internal-only languages such as Modern German is that they have a portmanteau for phi- and case features. Therefore, the light head is contained as a constituent within the relative pronoun when the internal and the external case match and when the internal case is the more complex one. As the light head can be recovered from within the relative pronoun, it can be deleted. There is a grammatical headless relative that surfaces with the relative pronoun which bears the internal case.
+
+When the internal case is the more complex one, neither the light head nor the relative pronoun is contained as a constituent within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
