--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -1033,7 +1033,7 @@ The relative pronoun \tit{was} `\ac{rel}.\ac{inan}.\tsc{nom/acc}' is syncretic b
 
 Remember from Chapter \ref{ch:typology} that Modern German is an internal-only type of language. This means that it allows the internal case to surface when it wins the case competition, but it does not allow the external case to do so. Solely looking at the cases in the example, it is expected that the example is ungrammatical: the internal nominative case cannot win over the external accusative case, and the external case is not allowed to surface. However, the example in \ref{ex:mg-syn} is grammatical, because there is a syncretism between the nominative and the accusative in the inanimate gender. This leads me to distinguish a second type of constituent containment: formal constituent containment. This type of containment holds when there is a constituent that corresponds to the same form that is contained in a given element.
 
-Technically, this works as follows. The fact that there is a syncretism between the nominative and the accusative means that there is a lexical entry for the \tsc{acc}P which contains the feature \tsc{f}2 and the \tsc{nom}P, but not a more specific one that spells out the \tsc{nom}P on its own. In \ref{ex:nom-acc-syn}, I give the lexical entry, which spells out as \tit{-as}.
+Technically, this works as follows. The fact that there is a syncretism between the nominative and the accusative means that there is a lexical entry for the \tsc{acc}P which contains the feature \tsc{f}2 and the \tsc{nom}P, but not a more specific one that spells out the \tsc{nom}P on its own. In \ref{ex:nom-acc-syn}, I give the lexical entry, which spells out as \tit{s}.
 
 \ex.\label{ex:nom-acc-syn}
 \begin{forest} boom
@@ -1046,7 +1046,7 @@ Technically, this works as follows. The fact that there is a syncretism between 
           ]
       ]
   ]
-  {\draw (.east) node[right]{⇔ \tit{-as}}; }
+  {\draw (.east) node[right]{⇔ \tit{s}}; }
 \end{forest}
 
 In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bears a more complex case than the relative pronoun and there is a syncretism between the nominative and the accusative case.
@@ -1060,7 +1060,7 @@ In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bear
       \begin{forest} boom
         [\tsc{acc}P,
         tikz={
-        \node[label=below:\tit{-as},
+        \node[label=below:\tit{s},
         draw,circle,
         scale=0.9,
         fit to=tree]{};
@@ -1091,7 +1091,7 @@ In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bear
             dotted,
             scale=0.9,
             fit to=tree]{};
-            \node[label=below:\tit{-as},
+            \node[label=below:\tit{s},
             draw,circle,
             scale=0.85,
             fit to=tree]{};
@@ -1109,9 +1109,9 @@ In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bear
   \label{fig:acc-nom-syn}
 \end{figure}
 
-The \tsc{acc}P in the light head corresponds to \tit{-as}, illustrated by the circle around the \tsc{acc}P and the \tit{-as} under it. The \tsc{nom}P in the relative pronoun corresponds to \tit{-as} too, illustrated in the same way.
+The \tsc{acc}P in the light head corresponds to \tit{s}, illustrated by the circle around the \tsc{acc}P and the \tit{s} under it. The \tsc{nom}P in the relative pronoun corresponds to \tit{s} too, illustrated in the same way.
 I draw a dotted circle around each constituent that is a constituent in both the light head and the relative pronoun.
-The light head (the \tsc{acc}P realized by \tit{-as}) is syncretic with a constituent within the relative pronoun (the \tsc{nom}P realized by \tit{-as}).
+The light head (the \tsc{acc}P realized by \tit{s}) is syncretic with a constituent within the relative pronoun (the \tsc{nom}P realized by \tit{s}).
 As the light head is deleted, the headless relative surfaces with the relative pronoun that bears the internal case.
 I illustrate this by drawing a dotted circle around each constituent that is a constituent in both the light head and the relative pronoun and by marking the content of the dotted circle for the light head gray.
 
@@ -1157,8 +1157,8 @@ In this chapter I only discuss the situation in which the relative pronoun as a 
       light head 2 & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-      [DP, s sep = 20 mm
-          [DP,
+      [XP, s sep = 20 mm
+          [XP,
           tikz={
           \node[
           draw,circle,
@@ -1191,7 +1191,7 @@ In this chapter I only discuss the situation in which the relative pronoun as a 
           fit to=tree]{};
           }
               [\tsc{rel}]
-              [DP
+              [XP
                   [\phantom{xxx}, roof, baseline]
               ]
           ]
@@ -1215,24 +1215,24 @@ In this chapter I only discuss the situation in which the relative pronoun as a 
   \label{fig:rel-lh-unres-2}
 \end{figure}
 
-I propose that this light head does not only consist of phi- and case-features, but that they also contain a definite feature \tsc{d}. In Chapter \ref{ch:deriving-unrestricted} I motivate this claim. The light head is spelled out by two lexical entries. The definite feature is spelled out by its own lexical entry, indicated by the circle around the \tsc{d}P. The rest of the light head is spelled out by the portmanteau of phi- and case-features.
+I propose that this light head does not only consist of phi- and case-features, but that they also contain a feature I here refer to as X. In Chapter \ref{ch:deriving-unrestricted} I motivate this claim and I discuss the content of this feature. The light head is spelled out by two lexical entries. The definite feature is spelled out by its own lexical entry, indicated by the circle around the XP. The rest of the light head is spelled out by the portmanteau of phi- and case-features.
 
 The relative pronoun always consists of all features the light head consists of (see Section \ref{sec:assumptions} and motivation in Chapter \ref{ch:deriving-unrestricted}).
 Therefore, it consists of phi- and case-features, the feature \tsc{rel} and the feature \tsc{def}.\footnote{
-I actually assume that the relative pronoun that is being compared to the first possible light head also contains the feature \tsc{d}. I left it out of the structures there above because it was not relevant for the discussion.
+I actually assume that the relative pronoun that is being compared to the first possible light head also contains the feature X. I left it out of the structures there above because it was not relevant for the discussion.
 }
 The phi- and case-features are spelled out by the same portmanteau as in the light head. The feature \tsc{rel} and the feature \tsc{def} are spelled out by a single lexical entry.
-It is crucial for the analysis that there is a lexical entry for the \tsc{rel}P which contains the feature \tsc{rel} and the \tsc{d}P, but not a more specific one that spells out the \tsc{d}P on its own. In \ref{ex:entry-d}, I give the lexical entry, which spells out as \tit{d-}.
+It is crucial for the analysis that there is a lexical entry for the \tsc{rel}P which contains the feature \tsc{rel} and the XP, but not a more specific one that spells out the XP on its own. In \ref{ex:entry-d}, I give the lexical entry, which spells out as \tit{X}.
 
 \ex.\label{ex:entry-d}
 \begin{forest} boom
   [\tsc{rel}P
       [\tsc{rel}]
-      [DP
+      [XP
           [\phantom{xxx}, roof]
       ]
   ]
-  {\draw (.east) node[right]{⇔ \tit{d-}}; }
+  {\draw (.east) node[right]{⇔ \tit{X}}; }
 \end{forest}
 
 Chapter \ref{ch:deriving-unrestricted} motivates this analysis for the unrestricted type of language Old High German. It also shows that the two other languages types, discussed as Modern German and Polish, do not have such a syncretism, so the introduction of a second possible light head does not aid them.
@@ -1247,16 +1247,16 @@ In Figure \ref{fig:nom-nom-unres}, I give an example of the second possible ligh
       light head 2 & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-        [\tsc{d}P, s sep=20mm,
+        [XP, s sep=20mm,
         tikz={
         \node[draw,circle,
         dotted,
         scale=1,
         fit to=tree]{};
         }
-            [\tsc{d}P,
+            [XP,
             tikz={
-            \node[label=below:\tit{d},
+            \node[label=below:\tit{X},
             draw,circle,
             scale=0.85,
             fit to=tree]{};
@@ -1265,7 +1265,7 @@ In Figure \ref{fig:nom-nom-unres}, I give an example of the second possible ligh
             ]
             [\tsc{nom}P,
             tikz={
-            \node[label=below:\tit{-er},
+            \node[label=below:\tit{Y},
             draw,circle,
             scale=0.85,
             fit to=tree]{};
@@ -1289,19 +1289,19 @@ In Figure \ref{fig:nom-nom-unres}, I give an example of the second possible ligh
         }
             [\tsc{rel}P,
             tikz={
-            \node[label=below:\tit{d},
+            \node[label=below:\tit{X},
             draw,circle,
             scale=0.85,
             fit to=tree]{};
             }
                 [\tsc{rel}]
-                [DP
+                [XP
                     [\phantom{xxx}, roof, baseline]
                 ]
             ]
             [\tsc{nom}P,
             tikz={
-            \node[label=below:\tit{-er},
+            \node[label=below:\tit{Y},
             draw,circle,
             scale=0.85,
             fit to=tree]{};
@@ -1320,9 +1320,9 @@ In Figure \ref{fig:nom-nom-unres}, I give an example of the second possible ligh
   \label{fig:nom-nom-unres}
 \end{figure}
 
-The light head corresponds to \tit{d-er}, illustrated by the circle around the \tsc{d}P and the \tit{d-} under it and the circle around the \tsc{nom}P and the \tit{er} under it. The relative pronoun corresponds to \tit{d-er} too, illustrated by the circle around the \tsc{rel}P and the \tit{d-} under it and the circle around the \tsc{nom}P and the \tit{er} under it.
+The light head corresponds to \tit{X-Y}, illustrated by the circle around the XP and the \tit{X} under it and the circle around the \tsc{nom}P and the \tit{Y} under it. The relative pronoun corresponds to \tit{X-Y} too, illustrated by the circle around the \tsc{rel}P and the \tit{X} under it and the circle around the \tsc{nom}P and the \tit{Y} under it.
 I draw a dotted circle around each constituent that is a constituent in both the light head and the relative pronoun.
-The light head (the \tsc{d}P realized by \tit{d-er}) is syncretic with the relative pronoun (the \tsc{rel}P realized by \tit{d-er}).
+The light head (the XP realized by \tit{X-er}) is syncretic with the relative pronoun (the \tsc{rel}P realized by \tit{X-Y}).
 As the two forms are entirely syncretic, either the light head or the relative pronoun can be deleted. I delete the relative pronoun here, as I discuss how it is possible for the relative pronoun to be deleted even though it has a feature less than the light head.
 I illustrate this by marking the content of the dotted circle for the relative pronoun gray.
 
@@ -1339,16 +1339,16 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
       light head 2 & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-        [\tsc{d}P, s sep=20mm,
+        [XP, s sep=20mm,
         tikz={
         \node[draw,circle,
         dotted,
         scale=1,
         fit to=tree]{};
         }
-            [\tsc{d}P,
+            [XP,
             tikz={
-            \node[label=below:\tit{d},
+            \node[label=below:\tit{X},
             draw,circle,
             scale=0.85,
             fit to=tree]{};
@@ -1357,7 +1357,7 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
             ]
             [\tsc{acc}P,
             tikz={
-            \node[label=below:\tit{-en},
+            \node[label=below:\tit{Y},
             draw,circle,
             scale=0.85,
             fit to=tree]{};
@@ -1384,19 +1384,19 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
         }
             [\tsc{rel}P,
             tikz={
-            \node[label=below:\tit{d},
+            \node[label=below:\tit{X},
             draw,circle,
             scale=0.85,
             fit to=tree]{};
             }
                 [\tsc{rel}]
-                [DP
+                [XP
                     [\phantom{xxx}, roof, baseline]
                 ]
             ]
             [\tsc{nom}P,
             tikz={
-            \node[label=below:\tit{-er},
+            \node[label=below:\tit{Y},
             draw,circle,
             scale=0.85,
             fit to=tree]{};
@@ -1415,7 +1415,7 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
   \label{fig:acc-nom-unres}
 \end{figure}
 
-The light head corresponds to \tit{d-en}, illustrated by the circle around the \tsc{d}P and the \tit{d-} under it and the circle around the \tsc{acc}P and the \tit{en} under it. The relative pronoun corresponds to \tit{d-er}, illustrated by the circle around the \tsc{rel}P and the \tit{d} under it and the circle around the \tsc{nom}P and the \tit{er} under it.
+The light head corresponds to \tit{X-Z}, illustrated by the circle around the XP and the \tit{X} under it and the circle around the \tsc{acc}P and the \tit{Z} under it. The relative pronoun corresponds to \tit{X-Y}, illustrated by the circle around the \tsc{rel}P and the \tit{X} under it and the circle around the \tsc{nom}P and the \tit{Y} under it.
 I draw a dotted circle around each constituent that is a constituent in both the light head and the relative pronoun.
 The relative pronoun is no longer syncretic with the relative pronoun or a constituent within it. Therefore, the relative pronoun cannot be deleted, which I illustrate by leaving the content of both dotted circles unfilled.
 As none of the items is deleted, it is expected that there is no grammatical headless relative possible.
